--- a/src/main/webapp/partials/userEditModal.html
+++ b/src/main/webapp/partials/userEditModal.html
@@ -1,9 +1,9 @@
 <div ng-controller="ModalController">
     <script type="text/ng-template" id="partials/userEditModal.html">
         <div class="modal-header">
-            <h3 class="modal-title">Edit Student</h3>
+            <h3 class="modal-title">{{title}}</h3>
         </div>
-        <div class="modal-body">
+        <div class="modal-body" ng-show="student !== undefined">
             <label>First: </label><input ng-model="student.first" value="{{student.first}}" /><br/>
             <label>Last: </label><input ng-model="student.last" value="{{student.last}}" />
         </div>
